Removed the delete method
